﻿1.67 (2011-XX-XX):
  Replaced hot key registration with low level keyboard hook.  Reinstated ctrl-tab and ctrl-shift-tab
  Moved application file migration execution before extApps.xml is loaded.  Also excluded from portable version

1.66 (2011-05-02):
  Fixed connections not working

1.65 (2011-05-02):
  Fixed Ctrl-Tab and Ctrl-Shift-Tab not working in any other applications while mRemoteNG is running
  Ctrl-Tab and Ctrl-Shift-Tab no longer work to switch tabs within mRemoteNG
  Fixed bug 36 - Install creates shortcuts only for the installing user
  Fixed bug 38 - Application uses the wrong Application Data settings folder (in Local Settings)
  Added code to the installer to check that the user is in the 'Power Users' or 'Administrators' group

1.64 (2011-04-27):
  Fixed bug 6 - VNC CTRL+key & keyboard combo mappings are broken
  Fixed bug 12 - Tab switch is not working in config panel
  Fixed bug 14 - RDP Connection authentication problem
  Fixed bug 22 - External App parameter macro expansion doesn't work with "try to integrate"
  Fixed bug 25 - Unhandled exception when mRemoteNG opens
  Added multilanguage support and German translation to the application
  Added Czech, Dutch, French, German, Polish, and Spanish translations to the installer
  Added Ctrl-Tab hotkey to switch to the next tab and Ctrl-Shift-Tab to switch to the previous tab
  Added Tab key to cycle through entries in the Config grid and Shift-Tab to cycle in reverse
  Added ability to configure external tools to run before or after a connection is established
  Fixed missing parameters in macro expansion for external tools
  Fixed RD Gateway and other inheritance bugs
  Changed how new connection files are created
  Changed the internal namespace of the application to mRemoteNG instead of mRemote
  Added credit for the DockPanel Suite to the About page
  Updated DockPanel Suite to version 2.5 RC1
  Updated VNCSharpNG to correct Ctrl and Alt key pass-through behavior

1.63 (2010-02-02):